--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/appBarMenu"
+        style="@style/defaultText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="AppBar Menu"
